#set(WIZNET_CHIP W5100S)
#set(ENV{WIZNET_CHIP} W5100S)
set(WIZNET_CHIP $ENV{WIZNET_CHIP})
if(${WIZNET_CHIP} STREQUAL W5100S)
    add_definitions(-D_WIZCHIP_=W5100S)
elseif(${WIZNET_CHIP} STREQUAL W5500)
    add_definitions(-D_WIZCHIP_=W5500)
else()
    message(FATAL_ERROR "WIZNET_CHIP is wrong = ${WIZNET_CHIP}")
endif()
message(STATUS "WIZNET_CHIP is = ${WIZNET_CHIP} in pico_e ")

add_subdirectory(dhcp_dns)
add_subdirectory(loopback)
add_subdirectory(lwiperf)
